# kb-backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: authz.py  bootstrap.py  config.py  db.py  es.py  es_memory.py  main.py  schema.sql  storage.py  storage_memory.py
app/adapters/: embedder.py  llm.py  parser.py
app/indexing/: gc.py  reconcile.py  relay.py
app/ingest/: chunker.py  diff.py  pipeline.py  summarizer.py
app/middleware/: auth.py
app/retrieval/: anchor.py  citation.py  fusion.py  guard.py  orchestrator.py  path_a.py  path_b.py  simhash.py
app/routers/: admin.py  admin_ops.py  docs.py  kbs.py  search.py
pi-ext/: index.ts  package.json
scripts/: cross_tenant_test.py  e2e_demo.py  gc_test.py  increment_test.py  path_a_test.py  reconcile_test.py  sample.md  version_test.py
sdk/: pyproject.toml
sdk/kb_sdk/: __init__.py  client.py
