[project]
name = "kb-backend"
version = "0.1.0"
description = "Enterprise KB backend — dual-path retrieval (summary navigation + vector), pi agent front-end"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "psycopg[binary]>=3.1",
  "sqlalchemy>=2.0",
  "elasticsearch>=8.13",
  "minio>=7.2",
  "redis>=5.0",
  "httpx>=0.27",
  "python-multipart>=0.0.9",
  "pdfplumber>=0.11",
  "anthropic>=0.28",
  "tiktoken>=0.7",
  "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
